[package]
name = "cargo-filter"
version = "0.1.0"
authors = ["do4gr"]
edition = "2018"
description = "Removes noise from running cargo test with a filter."
licenses = ["MIT"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
colored = "1.8"

